--- a/units/libs/@skeleton-tracing/package.json
+++ b/units/libs/@skeleton-tracing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@skeleton/transport",
+  "name": "@skeleton/tracing",
   "version": "1.0.0",
   "description": "RabbitMQ custom strategy and client",
   "main": "dist/index.js",
@@ -10,12 +10,7 @@
   },
   "dependencies": {
     "@libs/common": "^2.1.1",
-    "@nestjs/common": "^7.4.4",
-    "@nestjs/core": "^7.4.4",
-    "@nestjs/microservices": "^7.4.4",
-    "@skeleton/logger": "^2.1.1",
     "@skeleton/configuration": "^2.1.1",
-    "@skeleton/tracing": "^1.0.0",
     "amqplib": "^0.6.0",
     "uuid": "^8.3.1"
   },
