--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
     "@types/express": "^4.17.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.8",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.19.1",
+    "@types/supertest": "^2.0.4",
     "jest": "^26.5.2",
-    "prettier": "^2.1.2",
     "supertest": "^5.0.0",
     "ts-jest": "^26.4.1",
     "ts-loader": "^8.0.4",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.3",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb-typescript": "^11.0.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.4.1"
   },
   "jest": {
     "moduleFileExtensions": [
