--- a/units/libs/@skeleton-tracing/package.json
+++ b/units/libs/@skeleton-tracing/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@libs/common": "^2.1.1",
+    "@nestjs/common": "^7.4.4",
     "@skeleton/configuration": "^2.1.1",
     "amqplib": "^0.6.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@types/uuid": "^8.3.0"
