--- a/.eslintrc
+++ b/.eslintrc
@@ -21,9 +21,11 @@
   "rules": {
     "no-await-in-loop": "off",
     "import/prefer-default-export": "off",
+    "object-curly-newline": "off",
     "no-restricted-syntax": "off",
     "no-underscore-dangle": "off",
     "no-continue": "off",
+    "no-plusplus": "off",
     "no-useless-constructor": "off",
     "@typescript-eslint/space-before-function-paren": "off",
     "space-before-function-paren": ["error", {
